# GPGPU

Week2/GPGPUWeek2/: main.cpp
Week2/GPGPUWeek2/Build2/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cuda_project1.vcxproj.filters  lab2.sln
Week2/GPGPUWeek2/Build2/Debug/: cuda_project1.exp  cuda_project1.ilk
Week2/GPGPUWeek2/Build2/cuda_project1.dir/Debug/cuda_project1.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  (+3 more)
Week3/GPGPUWeek3Addvector/: CMakeLists.txt  sync.cu  vec-add.cu
Week3/GPGPUWeek3PointersCopy/: main.cpp
Week3/GPGPUWeek3PointersCopy/Build2/: CMakeCache.txt  cuda_project1.vcxproj
Week3/GPGPUWeek3PointersCopy/Build2/cuda_project1.dir/Debug/: cuda_project1.exe.recipe  main.cpp.cache
Week3/GPGPUWeek3StandardDataCopy/: CMakeLists.txt  main.cpp
Week3/GPGPUWeek3StandardDataCopy/Build2/: cmake_install.cmake
Week3/GPGPUWeek3StandardDataCopy/Build2/cuda_project1.dir/Debug/cuda_project1.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.read.1.tlog  cuda_project1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Week3/GPGPUWeek3StandardDataCopy/Build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Week3/GPGPUWeek3StandardDataCopy/Build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Week3/GPGPUWeek3StandardDataCopy3D/: main.cpp
Week3/GPGPUWeek3StandardDataCopy3D/Build2/Debug/: cuda_project1.exp  cuda_project1.lib
Week3/GPGPUWeek3StandardDataCopy3D/Build2/cuda_project1.dir/Debug/: main.cpp980783173.deps
(+22 files in other folders)
